
  ChangeLog for the spinning_mcmc repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     	 
   110: sluys, 04/02/2009
     - replaced waveformversion with mcmcWaveform and injectionWaveform in the run and 
       mcmc structs.  For now only the first is read and the second is set equal to the first.
     - made mcmc.input compatible with up to 20 parameters
     - shrunk the screen output a bit to fit 15 parameters in one line
   
   104: sluys, 30/01/2009
     - copied the n-parameter branch into the trunk
     
    94: sluys, 07/01/2009
     - map 0.25<eta<0.50 to 0.5-eta consistently in template12()
    
    93: sluys, 06/01/2009
     - allow for 0.25<eta<0.50 in template12() (Apostolatos)
    
    85: sluys, 08/12/2008
     - set tukeywin to 0.15
    
    83: sluys, 05/12/2008
     - Fixed bug: ifo[2].noisedoubleprecision was ifo[2].noisedoubleprecision 
       for data set 1 in mcmc_data.c
     - Added a new input file: mcmc.data (name specified in mcmc.input, 
       set selectdata=0 to use it).  See doc/mcmc.data for an example.
     - The parameter selectifos in mcmc.input selects the IFOs for the network
        
    65: sluys, 22/10/2008
     - Added possibility to start chains from specified values (new values for offsetmcmc)
       The input file has now one extra line 'starting values' below 'injection values'
     - The original (buggy?) dataset is back as #6 (for comparison with earlier results)
     - Some cleaning, parameters -> structs
    
    53: sluys, 06/08/2008
     - Replaced LALinterface.c with mcmc_lal.c: this contains all of LALinterface
       plus template15().  LAL-dependent stuff was moved from mcmc.h to the new
       file mcmc_lal.h.  A file mcmc_nolal.c was added to allow LALless compilation.
        
    48: sluys, 07/07/2008
     - Made some small changes (cleaning?) to the 15-waveform routines to see if 
       it changes anything
     
    47: sluys, 25/06/2008